<resources>
    <string name="app_name">電卓</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_sub">-</string>
    <string name="btn_add">+</string>
    <string name="btn_point">.</string>
    <string name="btn_equal">=</string>
    <string name="btn_clear">C</string>
    <string name="btn_PlusMinus">+/-</string>
    <string name="btn_black">黒</string>
    <string name="btn_white">白</string>
</resources>