<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="7"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="right"
        android:textSize="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/tv_operator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="50dp"
            />
    <TextView
        android:id="@+id/disp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="right"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:maxLength="12"
       />



    </LinearLayout>
    <!--2段目「C」「+/-」「÷」-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btn_C"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_clear"
            android:textSize="20dp"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_black"
            android:textSize="20dp"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_plus_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_PlusMinus"
            android:textSize="20dp"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_div"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
</LinearLayout>

    <!--3段目「7」「8」「9」「×」-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_seven"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_eight"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_nine"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn_mul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_mul"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <!--4段目「4」「5」「6」「-」-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_four"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_five"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_six"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn_sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_sub"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <!--5段目「1」「2」「3」「+」-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_one"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_two"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_three"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_add"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
    </LinearLayout>

    <!--6段目（一番下）「0」「.」「=」-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_zero"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
        <Button
            android:id="@+id/btn_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_point"
            android:textSize="20dp"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_equal"
            android:textSize="20dp"
            android:layout_margin="3dp"/>
    </LinearLayout>

</LinearLayout>